# d3d8-fps-limiter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  d3d8.def  d3d8.h  d3d8_limiter.ini  d3d8to9.ini  d3d8to9_base.h  d3d8to9_d3d8.c  d3d8to9_device.c  d3d8to9_device2.c  d3d8to9_resources.c  d3d8types.h  main.c
